crates/theoremc-macros/tests/expand/signature_drift.stderr
error[E0308]: mismatched types
  --> tests/expand/signature_drift.rs:12:1
   |
12 | theorem_file!("tests/expand/signature_drift.theorem");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn(u64, u32) -> bool`
                 found fn item `fn(u64, u32) -> u32 {account__deposit__h05158894bfb4}`
   = note: this error originates in the macro `theorem_file` (in Nightly builds, run with -Z macro-backtrace for more info)
